--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -10,8 +10,11 @@ $nightblack: #0B0B0B;
 $body-fontsize: calc(0.55em + 1vmin);
 $subheading: calc(0.75em + 1vmax);
 $heading: calc(1em + 1vmax);
+$title: calc(2.5em + 1vmax);
+
 
 $font-stack: "Roboto", Arial, Helvetica, sans-serif;
 
 $path--image: "../img/";
 $hero-image: 'hero-img.png';
+$project-image: 'hero-projects.png'
