--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -8,18 +8,23 @@
   background-color: rgba($color: $darkblue, $alpha: 0.03);
   @include flex();
   align-items: center;
+  border: 1px solid yellow;
 }
 
 .hero__container {
   height: 100vh;
   @include bg-img-full($hero-image, $size: cover);
   @include flex();
+  border: 1px solid red;
   .container__inner {
     margin-top: 8%;
   }
   .hero__prop-img {
     @extend .centered-block;
     @extend .container-width;
+    background: transparent;
+    box-shadow: none;
+    border: none;
     max-width: 300px;
     position: absolute;
     left: 50%;
@@ -218,7 +223,6 @@
         @include flex($direction: row, $wrap: wrap);
         @media screen and (max-width: 768px) {
           @include flex();
-          border: 1px solid pink;
        }
       }
       h1 {
@@ -283,7 +287,6 @@
       margin: 3em 0;
     }
     .project-gallery {
-      border: 1px solid red;
       @include flex($direction: row, $wrap: wrap);
       .project-btn {
         border: 3px solid $darkblue;
@@ -316,7 +319,6 @@
 }
 
 .modal-content, .project-modal {
-  border: 10px solid purple;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -336,6 +338,12 @@
   }
   .modal-body {
     @include flex($direction: row, $wrap: wrap, $horizontal-pos: space-between);
+    @media screen and (max-width: 600px) {
+      @include flex();
+      .carousel-container {
+        width: 100%;
+            }
+   }
     .carousel-container {
       width: 50%;
       .carousel-indicator {
