--- a/client/src/sass/reset.scss
+++ b/client/src/sass/reset.scss
@@ -50,3 +50,10 @@ table {
 img {
     width: 100%;
 }
+
+button {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
