--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -288,12 +288,13 @@
     }
     .project-gallery {
       @include flex($direction: row, $wrap: wrap);
+      border: 1px solid red;
       .project-btn {
         border: 3px solid $darkblue;
         position: relative;
-        width: calc(200px + 5vmax);
-        height: calc(100px + 5vmax);
-        margin: 1em;
+        width: calc(250px + 5vmax);
+        height: calc(150px + 5vmax);
+        margin: 1em 1.5em;
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -318,12 +319,8 @@
 
 }
 
-.modal-content, .project-modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, 50%);
-  width: 80vw !important;
+ .project-modal {
+  max-width: 80vw !important;
   .modal-header {
     background-color: $darkblue;
     h3 {
@@ -344,19 +341,32 @@
         width: 100%;
             }
    }
+   .content {
+    width: 50%;
+    padding: 1em;
+    h4 {
+      @include font-component($darkblue, $size: $subheading, $transform: uppercase);
+    }
+
+   }
     .carousel-container {
+      position: relative;
       width: 50%;
-      .carousel-indicator {
+      ol {
         position: relative;
+        margin: 0;
+        justify-content: flex-start;
+        li {
+         width: 100px;
+         height: 100px;
+         background-position: center;
+         background-size: cover;
+         background-repeat: no-repeat;
+         opacity: 1;
+       }
       }
-      .carousel-indicators li {
-        position: relative;
-        width: 100px;
-        height: 100px;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        border: 1px solid blue;
+      .inactive-item {
+        opacity: 0.5;
       }
     }
   }
