--- a/client/src/sass/_navbar.scss
+++ b/client/src/sass/_navbar.scss
@@ -106,6 +106,11 @@ nav {
 }
 
 .div-brand-alt {
-    padding: 0 !important;
+    padding: 0 1em !important;
     align-items: center;
+    line-height: 80px;
+    p {
+        padding: 0 1em;
+        margin-bottom: 0;
+    }
 }
