ready for deployment

--- a/client/src/sass/_abstract.scss
+++ b/client/src/sass/_abstract.scss
@@ -40,7 +40,7 @@ h2 {
 }
 
 .btn__contact {
-    padding: 0 1em;
+    padding: 0.5em;
     border: 1px solid $icewhite;
     overflow: hidden;
     position: relative;
