ready for deployment except form

--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -437,3 +437,9 @@
 .modal-dialog {
   max-width: 80vw;
 }
+
+.btn__contact-home {
+  padding: 1em;
+    overflow: hidden;
+    position: relative;
+}
