--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -11,10 +11,12 @@ $body-fontsize: calc(0.55em + 1vmin);
 $subheading: calc(0.75em + 1vmax);
 $heading: calc(1em + 1vmax);
 $title: calc(2.5em + 1vmax);
+$label: calc(0.33em + 1vmin);
 
 
 $font-stack: "Roboto", Arial, Helvetica, sans-serif;
 
 $path--image: "../img/";
 $hero-image: 'hero-img.png';
-$project-image: 'hero-projects.png'
+$project-image: 'hero-projects.png';
+$contact-us-img: 'contact-us-modal.png';
