--- a/client/src/sass/_container.scss
+++ b/client/src/sass/_container.scss
@@ -439,6 +439,56 @@
   min-width: 80vw;
 }
 
+.project-modal {
+  .modal-header {
+    border-bottom: none;
+  }
+  .modal-body {
+  margin: 0;
+  padding: 0;
+  height: 80vh;
+  }
+  .address-container {
+    height: 100%;
+    position: relative;
+    width: 50%;
+    @include bg-img-full($contact-us-img, $size: cover);
+    span {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+      h3 {
+        @include font-component($icewhite, $heading, center);
+        font-weight: bolder;
+      }
+      a {
+        color: #FFCF4B;
+      }
+  }
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
+
+  }
+  .form {
+    position: relative;
+    width: 50%;
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
+  }
+}
+ .form-group {
+   label {
+     display: block;
+     @include font-component($darkblue, $size: $label, $transform: uppercase);
+     font-weight: bold;
+   }
+}
+
 .btn__contact-home {
   padding: 1em;
     overflow: hidden;
